# one-hit-wonder

./: README.md
ohw-cdk/: cdk.context.json  cdk.json  package.json
ohw-cdk/lib/: index.ts
ohw-server/: Cargo.toml
ohw-server/migrations/: 000_init.sql  20230219133459_init.sql
ohw-server/src/: main.rs  migrations.rs  postgres.rs
ohw-server/src/note/: repository.rs
