[package]
name = "ohw-server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.21.1", features = ["full"] }
serde = "1.0.145"
serde_json = "1.0.93"
serde_derive = "1.0.152"
log = "0.4.17"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
lambda_runtime = "0.7.3"
lambda_http = "0.7.3"
uuid = { version = "1.3.0", features = ["v4"] }
rocket = "0.4.11"
rocket_contrib = { version = "0.4.11", features = ["uuid"] }
rocket_lamb = "0.6.0"
openssl = "0.10.45"
postgres = { version = "0.19.4", features = ["with-uuid-1"] }
postgres-openssl = "0.5.0"